Add package.json 1744616072617

--- a/package.json
+++ b/package.json
@@ -5,12 +5,49 @@
   "main": "main.js",
   "scripts": {
     "start": "electron . --no-sandbox",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "electron-builder build --win",
+    "build:win": "electron-builder build --win --x64"
+  },
+  "build": {
+    "appId": "com.electron.auth-app",
+    "productName": "Electron Auth App",
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true
+    },
+    "files": [
+      "**/*",
+      "src/**/*",
+      "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "src/",
+        "to": "src/",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "electron": "^25.9.8"
+    "@electron/remote": "^2.1.2",
+    "bcryptjs": "^2.4.3"
+  },
+  "devDependencies": {
+    "electron": "^25.0.0",
+    "electron-builder": "^24.6.4"
   }
 }
